[gd_scene load_steps=12 format=3 uid="uid://brj1rmddrqfyr"]

[ext_resource type="Script" uid="uid://dly05hirbh85x" path="res://scenes/interactive_objects/collection/computer_display.gd" id="1_jt3x0"]
[ext_resource type="Theme" uid="uid://duvvtwp2krpbj" path="res://assets/themes/computer_theme.tres" id="1_osdv1"]
[ext_resource type="Texture2D" uid="uid://c50ktuodw3dko" path="res://assets/textures/computer_wallpaper.jpg" id="2_jt3x0"]
[ext_resource type="Texture2D" uid="uid://b15nk2pupsahi" path="res://assets/textures/computer_windows_icon.png" id="3_etlvh"]
[ext_resource type="Texture2D" uid="uid://bxqsdb0wm4ev8" path="res://assets/textures/computer_demon_upgrade_icon.png" id="4_5souu"]
[ext_resource type="Texture2D" uid="uid://ced6fqocappi4" path="res://icon.svg" id="4_bkr5v"]
[ext_resource type="PackedScene" uid="uid://bwqccmvft3sx4" path="res://scenes/upgrades_shop/upgrades_shop.tscn" id="5_nbp6s"]

[sub_resource type="Animation" id="Animation_etlvh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodificationBubble:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodificationBubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 548)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NodificationBubble:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NodificationBubble:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BootBlackFading:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BootBlackFading:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BootBlackFading/OSLogoTextureRect:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bkr5v"]
resource_name = "boot_fade"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BootBlackFading:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BootBlackFading:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BootBlackFading/OSLogoTextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5.5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jt3x0"]
resource_name = "nodification_bubble_anim"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NodificationBubble:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 4.5, 5),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(1, 1), Vector2(1, 1), Vector2(0.01, 0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NodificationBubble:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 4.5, 5),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 548), Vector2(0, 548), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NodificationBubble:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 4.5, 5),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NodificationBubble:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etlvh"]
_data = {
&"RESET": SubResource("Animation_etlvh"),
&"boot_fade": SubResource("Animation_bkr5v"),
&"nodification_bubble_anim": SubResource("Animation_jt3x0")
}

[node name="ComputerDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_osdv1")
script = ExtResource("1_jt3x0")

[node name="Wallpaper" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jt3x0")
expand_mode = 1

[node name="DesktopInterface" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="DesktopInterface"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="DesktopIcons" type="GridContainer" parent="DesktopInterface"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 9

[node name="UpgradesShopButton" type="Button" parent="DesktopInterface/DesktopIcons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "Demon Upgrade"
icon = ExtResource("4_5souu")
autowrap_mode = 3
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="DesktopActionBar" type="Control" parent="DesktopInterface"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Background" type="ColorRect" parent="DesktopInterface/DesktopActionBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23921569, 0.59607846, 0, 0.39215687)

[node name="Actions" type="HBoxContainer" parent="DesktopInterface/DesktopActionBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="WindowButton" type="Button" parent="DesktopInterface/DesktopActionBar/Actions"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_etlvh")
flat = true
expand_icon = true

[node name="Line" type="ColorRect" parent="DesktopInterface/DesktopActionBar/Actions"]
custom_minimum_size = Vector2(5, 52)
layout_mode = 2
size_flags_vertical = 4
color = Color(0, 0.7019608, 0, 0.39215687)

[node name="OktaMail" type="Button" parent="DesktopInterface/DesktopActionBar/Actions"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_bkr5v")
flat = true
expand_icon = true

[node name="NodificationBubble" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -0.00036621094
grow_vertical = 0
pivot_offset = Vector2(0, 100)

[node name="Background" type="ColorRect" parent="NodificationBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23921569, 0.50980395, 0, 0.78431374)

[node name="Labels" type="VBoxContainer" parent="NodificationBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AppNameRichTextLabel" type="RichTextLabel" parent="NodificationBubble/Labels"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 17
theme_override_font_sizes/bold_font_size = 17
bbcode_enabled = true
text = "[b]APP NAME[/b]"

[node name="TextLabel" type="Label" parent="NodificationBubble/Labels"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 3
text = "Text"
autowrap_mode = 3

[node name="MailClient" type="Control" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -391.0
offset_bottom = -68.0
grow_horizontal = 0
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MailClient"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23921569, 0.50980395, 0, 0.78431374)

[node name="OktaMailClientRichTextLabel" type="RichTextLabel" parent="MailClient"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "[b]OktaMail Client[/b]"
fit_content = true
horizontal_alignment = 1

[node name="Line" type="ColorRect" parent="MailClient"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 37.0
offset_right = -7.0
offset_bottom = 40.0
grow_horizontal = 2
color = Color(0, 1, 0, 1)

[node name="Mails" type="ItemList" parent="MailClient"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 42.0
offset_bottom = -246.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="Line2" type="ColorRect" parent="MailClient"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 337.0
offset_right = -7.0
offset_bottom = 340.0
grow_horizontal = 2
color = Color(0, 0.28235295, 0, 1)

[node name="MailContent" type="RichTextLabel" parent="MailClient"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 336.0
offset_bottom = 580.0
grow_horizontal = 2
theme_override_colors/default_color = Color(9.926968e-07, 0.28199652, 0, 1)
theme_override_font_sizes/normal_font_size = 22
theme_override_font_sizes/bold_font_size = 22
text = "mail content"

[node name="HeatBar" type="Control" parent="."]
anchors_preset = 0
offset_right = 170.0
offset_bottom = 280.0

[node name="Background" type="ColorRect" parent="HeatBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23921569, 0.50980395, 0, 0.78431374)

[node name="HeatProgressBar" type="ProgressBar" parent="HeatBar"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 50.0
offset_bottom = -30.0
grow_vertical = 2
fill_mode = 3
show_percentage = false

[node name="WaterPumpedLabel" type="Label" parent="HeatBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "0.0 / 0.0 L"
vertical_alignment = 1
autowrap_mode = 3

[node name="UpgradesShop" parent="." instance=ExtResource("5_nbp6s")]
visible = false
layout_mode = 1

[node name="BootBlackFading" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="OSLogoTextureRect" type="TextureRect" parent="BootBlackFading"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_etlvh")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_etlvh")
}

[node name="PumpingTimeTimer" type="Timer" parent="."]

[connection signal="pressed" from="DesktopInterface/DesktopIcons/UpgradesShopButton" to="." method="_on_upgrades_shop_button_pressed"]
[connection signal="pressed" from="DesktopInterface/DesktopActionBar/Actions/WindowButton" to="." method="_on_window_button_pressed"]
[connection signal="item_selected" from="MailClient/Mails" to="." method="_on_mails_item_selected"]
[connection signal="timeout" from="PumpingTimeTimer" to="." method="_on_pumping_time_timer_timeout"]
